grafana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k3d-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
